--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Tiago Ribeiro de Barros",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17"
+    "express": "4.17",
+    "express-async-errors": "3.1"
   },
   "devDependencies": {
     "eslint": "6.8",
