--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17",
-    "express-async-errors": "3.1"
+    "express-async-errors": "3.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "6.8",
