--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Tiago Ribeiro de Barros",
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8",
     "express": "4.17",
     "express-async-errors": "3.1",
     "morgan": "^1.10.0"
